src/test/resources/mutation/error/serviceNotFound/schema.graphqls
type Mutation {
  endrePersonSimple(id: ID!): ID! @service(name: "SERVICE_NOT_FOUND")
}
